-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
-
QE 2022-04-04
-
None
-
None
-
None
-
None
-
None
-
None
-
None
SERVER-62785 introduced a regression that fails transactions which would previously succeed and generate multiple applyOps entries. The regression can be reproduced deleting a large amount of small documents in a single transaction such that the committed operation would span across multiple applyOps.