SERVER-64860 Tighten up "applyOps" oplog entry size computation